# settings-manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml
src/settings_manager/: __init__.py  cli.py  mermaid.py  settings.py  tui.py
src/settings_manager/locale/bg/LC_MESSAGES/: settings.po
src/settings_manager/locale/cs/LC_MESSAGES/: settings.po
src/settings_manager/locale/da/LC_MESSAGES/: settings.po
src/settings_manager/locale/de/LC_MESSAGES/: settings.po
src/settings_manager/locale/el/LC_MESSAGES/: settings.po
src/settings_manager/locale/en/LC_MESSAGES/: settings.po
src/settings_manager/locale/es/LC_MESSAGES/: settings.po
src/settings_manager/locale/et/LC_MESSAGES/: settings.po
src/settings_manager/locale/fi/LC_MESSAGES/: settings.po
src/settings_manager/locale/fr/LC_MESSAGES/: settings.po
src/settings_manager/locale/ga/LC_MESSAGES/: settings.po
src/settings_manager/locale/hr/LC_MESSAGES/: settings.po
src/settings_manager/locale/hu/LC_MESSAGES/: settings.po
src/settings_manager/locale/it/LC_MESSAGES/: settings.po
src/settings_manager/locale/lt/LC_MESSAGES/: settings.po
src/settings_manager/locale/lv/LC_MESSAGES/: settings.po
src/settings_manager/locale/mt/LC_MESSAGES/: settings.po
src/settings_manager/locale/nl/LC_MESSAGES/: settings.po
src/settings_manager/locale/pl/LC_MESSAGES/: settings.po
src/settings_manager/locale/pt/LC_MESSAGES/: settings.po
src/settings_manager/locale/ro/LC_MESSAGES/: settings.po
src/settings_manager/locale/sk/LC_MESSAGES/: settings.po
src/settings_manager/locale/sl/LC_MESSAGES/: settings.po
src/settings_manager/locale/sv/LC_MESSAGES/: settings.po
tests/: conftest.py  test_cli.py  test_localization.py  test_markdown.py  test_mermaid_integration.py  test_settings.py  test_tui.py
