[project]
name = "settings-manager"
version = "0.1.0"
description = "A robust and flexible Python module for managing application settings from YAML, TOML and Markdown files."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Richard Bláha", email = "richardblaha@k6labs.cz" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["settings", "configuration", "yaml", "toml", "markdown", "localization"]
dependencies = [
    "PyYAML>=6.0",
    "python-frontmatter>=1.0.0",
    "Cerberus>=1.3.4",
    "tomli-w>=1.0.0",
    "textual>=0.50.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
    "types-PyYAML",
]

[project.scripts]
settings-manager = "settings_manager.cli:main"

[project.urls]
Homepage = "https://github.com/k6labs/settings-manager"
Repository = "https://github.com/k6labs/settings-manager.git"
Issues = "https://github.com/k6labs/settings-manager/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"settings_manager" = ["locale/*/*/*.mo", "locale/*/*/*.po"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "PL",   # pylint
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
    "TID",  # flake8-tidy-imports
]
ignore = [
    "PLR0913", # Too many arguments
    "PLR2004", # Magic values in tests
    "PLC0415", # Inline imports are used for optional UI components
]

[tool.ruff.lint.isort]
known-first-party = ["settings_manager"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "frontmatter.*",
    "yaml.*",
    "cerberus.*",
    "tomli_w.*",
    "textual.*",
]
ignore_missing_imports = true
